# mdlive

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dev-build.sh  release.sh
.ai_tasks/: adjust-width.design.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  update-homebrew.yml
commands/: mdlive.md
demo/: README.md  changelog.md  new.json  quickstart.md
demo/.mdlive/history/README.md/: 1771291344.md
demo/.mdlive/history/api/rate-limiting.md/: 1771271566.md
demo/api/: authentication.md  endpoints.md  errors.md  rate-limiting.md  webhooks.md
demo/architecture/: data-flow.md  database-schema.md  overview.md
demo/guides/: configuration.md  deployment.md  installation.md  troubleshooting.md
demo/tutorials/: advanced-queries.md  building-a-plugin.md  ci-cd-pipeline.md  getting-started.md  monitoring.md  testing-strategies.md
docs/: architecture.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: mdlive.md
skills/mdlive/: SKILL.md
skills/mdserve/: SKILL.md
src/: app.rs  app_tests.rs  config.rs  lib.rs  main.rs  router.rs  state.rs  template.rs  tree.rs  util.rs  watcher.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/handlers/: api.rs  mod.rs  pages.rs  static_files.rs  websocket.rs  workspace.rs
templates/: main.html
tests/: api_test.rs  pages_test.rs  websocket_test.rs  workspace_test.rs
tests/common/: mod.rs
