[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "mdlive"
version = "2.1.0"
authors = ["Jose Fernandez <me@jrfernandez.com>", "Bryan Grimes"]
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
description = "Markdown workspace server for AI coding agents"
repository = "https://github.com/bearded-giant/mdlive"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "fs", "time"] }
markdown = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
notify = "8.2.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
minijinja = { version = "2.12.0", features = ["json"] }
minijinja-embed = { version = "2.12.0", default-features = false }
toml = "0.8"
dirs = "6"

[build-dependencies]
minijinja-embed = { version = "2.12.0", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
axum-test = { version = "16.0", features = ["ws"] }
tempfile = "3.0"
tokio-test = "0.4"
