[package]
name = "mdlive-app"
version = "2.3.1"
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
description = "mdlive desktop app"

[dependencies]
mdlive = { path = ".." }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-window-state = "2"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7.9"
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSOpenPanel", "NSSavePanel", "NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSURL", "NSArray", "NSString"] }
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "mdlive"
path = "src/main.rs"

[lib]
name = "mdlive_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"
